# fetpapiServer

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: main.yml
docker/centos7.5.1804/: Dockerfile
java/withoutFesapi/com/f2i_consulting/fetpapi/server/: FetpapiServer.java  MyServerInitializationParameters.java
java/withoutFesapi/com/f2i_consulting/fetpapi/server/handlers/: MyOwnServerCoreHandlers.java
src/: MyDataObjectRepository.cpp  MyDataObjectRepository.h  MyOwnCoreProtocolHandlers.cpp  MyOwnCoreProtocolHandlers.h  MyOwnDataArrayProtocolHandlers.cpp  MyOwnDataArrayProtocolHandlers.h  MyOwnDiscoveryProtocolHandlers.cpp  MyOwnDiscoveryProtocolHandlers.h  MyOwnStoreNotificationProtocolHandlers.cpp  MyOwnStoreNotificationProtocolHandlers.h  MyOwnStoreProtocolHandlers.cpp  MyOwnStoreProtocolHandlers.h  MyServerInitializationParameters.h  main.cpp
